# Sutter_Chargemasters

./: 352182617-1336333954_sutter-surgical-hospital-north-valley_standardcharges.csv  940562680-1689035628_sutter-maternity-and-surgery-center-of-santa-cruz_standardcharges.csv  940562680-1952634008_SUTTER-LAKESIDE-HOSPITAL_standardcharges.csv  942988520-1700960267_SUTTER-COAST-HOSPITAL_standardcharges.csv  990298651-1477519908_SUTTER-PACIFIC-KAHI-MOHALA_standardcharges.csv  kahi_chargemaster.csv  pyproject.toml
clean_data_12.15.2022/: 352182617-1336333954_sutter-surgical-hospital-north-valley_standardcharges.csv  940562680-1104059153_NOVATO-COMMUNITY-HOSPITAL_standardcharges.csv  940562680-1689035628_sutter-maternity-and-surgery-center-of-santa-cruz_standardcharges.csv  940562680-1952634008_SUTTER-LAKESIDE-HOSPITAL_standardcharges.csv  941156621-1366896300_MEMORIAL-HOSPITAL-LOS-BANOS_standardcharges.csv  942988520-1700960267_SUTTER-COAST-HOSPITAL_standardcharges.csv  990298651-1477519908_SUTTER-PACIFIC-KAHI-MOHALA_standardcharges.csv
main/: clean_raw_data_12.15.2022.py
raw_data_12.15.2022/: 940562680-1104059153_NOVATO-COMMUNITY-HOSPITAL_standardcharges.csv  941156621-1366896300_MEMORIAL-HOSPITAL-LOS-BANOS_standardcharges.csv  990298651-1477519908_SUTTER-PACIFIC-KAHI-MOHALA_standardcharges.csv
